[package]
name = "chrommydoggymommy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
byteorder = "1.5.0"
clap = { version = "4.5.9", features = ["derive"] }
futures-util = "0.3.30"
indicatif = "0.17.8"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
pyo3 = "0.22.0"
rand = "0.8.5"
rkyv = "0.7.44"
sha2 = "0.10.8"
tokio-stream = "0.1.15"
tracing-mutex = "0.3.0"

[dependencies.tokio]
version = "1"
features = ["full"]
